modify login route

--- a/views/changepassword.ejs
+++ b/views/changepassword.ejs
@@ -1,26 +1,27 @@
 <%- include('partials/header') %>
-
 <div class="container mt-5">
-  <h1>Login</h1>
+  <h1>Change password</h1>
 
   <div class="row">
     <div class="col-sm-8">
       <div class="card">
         <div class="card-body">
 
-          <!-- Makes POST request to /login route -->
-          <form action="/login" method="POST">
+          <!-- Makes POST request to /changepassword  route -->
+          <form action="/changepassword" method="POST">
             <div class="form-group">
               <label for="email">Email</label>
               <input type="email" class="form-control" name="username">
             </div>
             <div class="form-group">
-              <label for="password">Password</label>
-              <input type="password" class="form-control" name="password">
+              <label for="newPass">new password</label>
+              <input type="password" class="form-control" name="newPass">
             </div>
-            <button type="submit" class="btn btn-dark">Login</button>
-            <br>
-            <span><a href="/changepassword">change password</a></span>
+            <div class="form-group">
+                <label for="oldPass">old password</label>
+                <input type="password" class="form-control" name="oldPass">
+              </div>
+            <button type="submit" class="btn btn-dark">change password</button>
           </form>
 
         </div>
@@ -28,11 +29,11 @@
     </div>
 
     <!-- <div class="col-sm-4">
-      <div class="card">
+      <div class="card social-block">
         <div class="card-body">
           <a class="btn btn-block" href="/auth/google" role="button">
             <i class="fab fa-google"></i>
-            Sign In with Google
+            Sign Up with Google
           </a>
         </div>
       </div>
@@ -41,4 +42,4 @@
   </div>
 </div>
 
-<%- include('partials/footer') %>
+<%- include('partials/header') %>
